--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             display: grid;
             grid-template-columns: 2fr 1fr;
             gap: 30px;
-            margin: 20px auto 0px;
+            margin: 20px auto;
             padding: 20px;
             border-radius: 30px;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            width: 95%;
+            width: 90%;
         }
 
         .main-card {
@@ -63,7 +63,7 @@
         }
 
         #temp {
-            font-size: 10rem;
+            font-size: 8rem;
             font-weight: bolder;
             margin: 0px;
         }
